@@ -75,6 +75,7 @@ struct _XfceItembarPrivate
     
     int drop_index;
     guint raised:1;
+    guint expand_allowed:1;
 };
 
 struct _XfceItembarChild
@@ -313,6 +314,8 @@ xfce_itembar_init (XfceItembar * itembar)
     priv->event_window     = NULL;
     priv->drag_highlight   = NULL;
     priv->drop_index       = -1;
+    priv->raised           = FALSE;
+    priv->expand_allowed   = FALSE;
 }
 
 /* GObject */
@@ -497,7 +500,7 @@ xfce_itembar_size_allocate (GtkWidget *widget, GtkAllocation *allocation)
         {
             height = bar_height;
             
-            if (child->expand)
+            if (child->expand && priv->expand_allowed)
             {
                 n_expand++;
                 max_expand = MAX (max_expand, width);
@@ -511,7 +514,7 @@ xfce_itembar_size_allocate (GtkWidget *widget, GtkAllocation *allocation)
         {
             width = bar_height;
             
-            if (child->expand)
+            if (child->expand && priv->expand_allowed)
             {
                 n_expand++;
                 max_expand = MAX (max_expand, height);
@@ -524,7 +527,7 @@ xfce_itembar_size_allocate (GtkWidget *widget, GtkAllocation *allocation)
 
         props[i].allocation.width = width;
         props[i].allocation.height = height;
-        props[i].expand = child->expand;
+        props[i].expand = (child->expand && priv->expand_allowed);
     }
 
     total_expand = expand_width;
@@ -1007,6 +1010,30 @@ xfce_itembar_new (GtkOrientation orientation)
 
     return GTK_WIDGET (itembar);
 }
+
+/**
+ * xfce_itembar_set_allow_expand:
+ * @allow : %TRUE when the expansion is allowed.
+ *
+ * Set whether the 'expand' child property is honored.
+ *
+ * See also: xfce_itembar_set_child_expand().
+ **/
+void
+xfce_itembar_set_allow_expand (XfceItembar *itembar,
+                               gboolean     allow)
+{
+    XfceItembarPrivate *priv;
+
+    g_return_if_fail (XFCE_IS_ITEMBAR (itembar));
+
+    priv = XFCE_ITEMBAR_GET_PRIVATE (itembar);
+
+    priv->expand_allowed = allow;
+    gtk_widget_queue_resize (GTK_WIDGET(itembar));
+}
+
+
 
 /**
  * xfce_itembar_get_orientation:
