@@ -2,6 +2,7 @@ NEWS for xfce4-panel
 ====================
 4.4.2
 =====
+- Fix expansion of items a non-full-width panel. (Jasper)
 - Make sure tooltips are set for more than 1 clock instance (bug #3109).
   (Jasper)
 - Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
